public class Arqueiro extends Personagem {    
    public Arqueiro(String nome) throws NomeInvalidoException {
        super(nome, "Arqueiro", 45, 25);
        
    }
}