public class Guerreiro extends Personagem {

    public Guerreiro(String nome) throws NomeInvalidoException {
        super(nome, "Guerreiro", 50, 30);
    }
}