public class Mago extends Personagem {

    public Mago(String nome) throws NomeInvalidoException {
        super(nome, "Mago", 60, 15);
    }
}